# of_vis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DEPENDENCIES.md  README.md  main.py
cmake/: FindGLAD.cmake  FindGLFW3.cmake  FindIconFont.cmake  FindImGui.cmake  FindSTB.cmake  FindTinyFD.cmake  assimpTargets.cmake
projects/: CMakeLists.txt
projects/boundary_volume_ray_casting/: main.cpp
projects/calc_mesh_volume/: main.cpp
projects/dist_between_meshes_tool/: CMakeLists.txt  main.cpp
projects/preprocess/: CMakeLists.txt  demo_utils.hpp  main.cpp
projects/test_streamline_cluster/: CMakeLists.txt  main.cpp
projects/visualize/: CMakeLists.txt  main.cpp
projects/visualize_point_gaussian/: main.cpp
projects/visualize_volume_slices/: CMakeLists.txt  main.cpp
projects/visualize_volume_to_surface/: main.cpp
projects/visualize_volume_to_surface_with_clipping/: main.cpp
shader/: clipped_stencil.vert  mvp_instanced.vert  mvp_minimal.vert  mvp_normal.vert
shader/aneurysm/: diffuse_vessel.frag  diffuse_vessel.geom  diffuse_vessel.vert
shader/bounding_box/: aabb.geom
shader/compute/: transform_points.comp
shader/data_to_voxelgrid/: divide_by_count.comp  scalar_to_texture.frag  scalar_to_texture.geom  scalar_to_texture.vert  vector_to_texture.frag  vector_to_texture.geom  vector_to_texture.vert
shader/gui/: imgui.frag  imgui.vert
shader/mesh_visualisation/: dist_to_ref.frag  dist_to_ref.vert  distance.vert  selectable_wireframe.frag  selectable_wireframe.geom  selectable_wireframe.vert  solid_wireframe.frag  solid_wireframe.geom  solid_wireframe.vert
shader/raytracing/: raytracing.frag  raytracing.vert
shader/rendering/: checkerboard_texture.frag  color.frag  colored_instanced.vert  gbuffer.frag  gbuffer.vert  id.frag  id.vert  minimal_instanced.frag  normal.frag  pass_phong.frag  phong.frag  phong.vert  render_spheres.frag  render_spheres.vert  render_spheres_fixed.frag  render_spheres_fixed.vert  render_spheres_test.frag  render_spheres_test.geom  render_spheres_test.vert  screenfilling_quad.vert  texture_minimal.frag  texture_minimal.vert  white.frag
shader/visualization/: points_colormapped.frag  points_colormapped.geom  points_colormapped.vert  scalar_colormapped.frag  scalar_from_mesh_clipped.frag  scalar_from_mesh_clipped.vert  scalar_texture.frag  volume_grid_slicing.frag
shader/visualization/flow/: generate_streamlines.comp  glyphs_colormapped.frag  glyphs_colormapped.geom  glyphs_colormapped.vert  sphere.frag  sphere.vert  streamlines_colormapped.frag  streamlines_colormapped.geom  streamlines_colormapped.vert  surface_streamlines.vert  translucent_surface_back.frag  translucent_surface_front.frag
shader/visualization/flow/clustering/: streamlines_colormapped.frag  streamlines_colormapped.geom  streamlines_colormapped.vert
shader/visualization/flow/pathlines/: gen_pathlines_half_step.comp  gen_pathlines_integrate.comp  gen_pathlines_start_step.comp
shader/visualization/surface/: surface_colormapped.frag  surface_colormapped.vert  surface_diffuse.frag  surface_diffuse.vert
shader/visualization/volume/: slice.vert  slice_phong.vert  volume_ray_casting.frag  volume_ray_casting.vert  volume_to_plane.frag  volume_to_plane_phong.frag  volume_to_surface.vert  volume_to_surface_phong.frag  volume_to_surface_phong.vert
src/: CMakeLists.txt
src/aneurysm/: aneurysm_viewer.cpp  aneurysm_viewer.hpp
src/core/: display.hpp  gpu_interface.hpp  shader_settings.hpp  temp1734.hpp
src/data_processing/: clustering.cpp  clustering.hpp  data_analysis.hpp  plane_fitting.cpp  plane_fitting.hpp
src/display/: camera.cpp  camera.hpp  glfw.hpp  gui.cpp  gui.hpp  tostf_imgui_widgets.cpp  tostf_imgui_widgets.hpp  ui_elements.cpp  ui_elements.hpp  view.cpp  view.hpp  win_mgr.cpp  win_mgr.hpp  window.cpp  window.hpp
src/file/: file_handling.cpp  file_handling.hpp  stb_image.cpp  stb_image.hpp  stb_impl.cpp
src/foam_processing/: foam_loader.cpp  foam_loader.hpp  volume_grid.cpp  volume_grid.hpp
src/geometry/: geometry.cpp  geometry.hpp  mesh.cpp  mesh.hpp  mesh_handling.cpp  mesh_handling.hpp  primitives.cpp  primitives.hpp
src/gpu_interface/: buffer.cpp  buffer.hpp  debug.cpp  debug.hpp  element_buffer.cpp  element_buffer.hpp  fbo.cpp  fbo.hpp  gl.cpp  gl.hpp  gl_types.hpp  shader_program.cpp  shader_program.hpp  shader_util.hpp  storage_buffer.cpp  storage_buffer.hpp  texture.cpp  texture.hpp  texture_util.hpp  uniform.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/math/: advanced_techniques.hpp  distribution.hpp  glm_eigen_interop.hpp  glm_helper.hpp  interpolation.cpp  interpolation.hpp  statistics.hpp  vector_math.cpp  vector_math.hpp
src/mesh_processing/: halfedge_mesh.cpp  halfedge_mesh.hpp  structured_mesh.cpp  structured_mesh.hpp  tri_face_mesh.cpp  tri_face_mesh.hpp
src/preprocessing/: compact_grid.cpp  compact_grid.hpp  inlet_detection.cpp  inlet_detection.hpp  mesh_deformation.hpp  openfoam_exporter.cpp  openfoam_exporter.hpp
src/utility/: event_profiler.hpp  logging.cpp  logging.hpp  random.hpp  str_conversion.hpp  time.hpp  utility.hpp  vector.hpp
src/visualization/: control.hpp  vis_utilities.hpp  visualization.hpp
